// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EnterpriseList /> renders correctly call clearPortalConfiguration prop 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row mt-4"
  >
    <div
      className="col-sm-12 col-md"
    >
      <h1
        className={null}
      >
        Enterprise List
      </h1>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
    >
      <div
        className="border search-field"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="form-group form-inline"
        >
          <label
            className=""
            htmlFor="asInput3"
            id="label-asInput3"
          >
            Search:
          </label>
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            />
            <input
              aria-describedby="error-asInput3"
              aria-invalid={false}
              autoComplete="off"
              className="form-control is-invalid-nodanger input no-clear-btn"
              disabled={false}
              id="asInput3"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder=""
              readOnly={false}
              required={false}
              themes={Array []}
              type="search"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn search-btn"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-search"
                  id="Icon1"
                />
                <span
                  className="sr-only"
                >
                  Submit search
                </span>
              </button>
            </div>
          </div>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput3"
          >
            <span />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col"
    />
  </div>
</div>
`;

exports[`<EnterpriseList /> renders correctly with empty enterprises data 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row mt-4"
  >
    <div
      className="col-sm-12 col-md"
    >
      <h1
        className={null}
      >
        Enterprise List
      </h1>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
    >
      <div
        className="border search-field"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="form-group form-inline"
        >
          <label
            className=""
            htmlFor="asInput5"
            id="label-asInput5"
          >
            Search:
          </label>
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            />
            <input
              aria-describedby="error-asInput5"
              aria-invalid={false}
              autoComplete="off"
              className="form-control is-invalid-nodanger input no-clear-btn"
              disabled={false}
              id="asInput5"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder=""
              readOnly={false}
              required={false}
              themes={Array []}
              type="search"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn search-btn"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-search"
                  id="Icon1"
                />
                <span
                  className="sr-only"
                >
                  Submit search
                </span>
              </button>
            </div>
          </div>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput5"
          >
            <span />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col"
    />
  </div>
</div>
`;

exports[`<EnterpriseList /> renders correctly with enterprises data 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row mt-4"
  >
    <div
      className="col-sm-12 col-md"
    >
      <h1
        className={null}
      >
        Enterprise List
      </h1>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
    >
      <div
        className="border search-field"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="form-group form-inline"
        >
          <label
            className=""
            htmlFor="asInput4"
            id="label-asInput4"
          >
            Search:
          </label>
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            />
            <input
              aria-describedby="error-asInput4"
              aria-invalid={false}
              autoComplete="off"
              className="form-control is-invalid-nodanger input no-clear-btn"
              disabled={false}
              id="asInput4"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder=""
              readOnly={false}
              required={false}
              themes={Array []}
              type="search"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn search-btn"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-search"
                  id="Icon1"
                />
                <span
                  className="sr-only"
                >
                  Submit search
                </span>
              </button>
            </div>
          </div>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput4"
          >
            <span />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col"
    />
  </div>
</div>
`;

exports[`<EnterpriseList /> renders correctly with error state 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row mt-4"
  >
    <div
      className="col-sm-12 col-md"
    >
      <h1
        className={null}
      >
        Enterprise List
      </h1>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
    >
      <div
        className="border search-field"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="form-group form-inline"
        >
          <label
            className=""
            htmlFor="asInput8"
            id="label-asInput8"
          >
            Search:
          </label>
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            />
            <input
              aria-describedby="error-asInput8"
              aria-invalid={false}
              autoComplete="off"
              className="form-control is-invalid-nodanger input no-clear-btn"
              disabled={false}
              id="asInput8"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder=""
              readOnly={false}
              required={false}
              themes={Array []}
              type="search"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn search-btn"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-search"
                  id="Icon1"
                />
                <span
                  className="sr-only"
                >
                  Submit search
                </span>
              </button>
            </div>
          </div>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput8"
          >
            <span />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col"
    />
  </div>
</div>
`;

exports[`<EnterpriseList /> renders correctly with loading state 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row mt-4"
  >
    <div
      className="col-sm-12 col-md"
    >
      <h1
        className={null}
      >
        Enterprise List
      </h1>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
    >
      <div
        className="border search-field"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="form-group form-inline"
        >
          <label
            className=""
            htmlFor="asInput9"
            id="label-asInput9"
          >
            Search:
          </label>
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            />
            <input
              aria-describedby="error-asInput9"
              aria-invalid={false}
              autoComplete="off"
              className="form-control is-invalid-nodanger input no-clear-btn"
              disabled={false}
              id="asInput9"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder=""
              readOnly={false}
              required={false}
              themes={Array []}
              type="search"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn search-btn"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-search"
                  id="Icon1"
                />
                <span
                  className="sr-only"
                >
                  Submit search
                </span>
              </button>
            </div>
          </div>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput9"
          >
            <span />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col"
    />
  </div>
</div>
`;

exports[`<EnterpriseList /> renders correctly with search query and empty enterprises data 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row mt-4"
  >
    <div
      className="col-sm-12 col-md"
    >
      <h1
        className={null}
      >
        Enterprise List
      </h1>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
    >
      <div
        className="border search-field"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="form-group form-inline"
        >
          <label
            className=""
            htmlFor="asInput7"
            id="label-asInput7"
          >
            Search:
          </label>
          <div
            className="input-group"
          >
            <div
              className="input-group-prepend"
            />
            <input
              aria-describedby="error-asInput7"
              aria-invalid={false}
              autoComplete="off"
              className="form-control is-invalid-nodanger input"
              disabled={false}
              id="asInput7"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder=""
              readOnly={false}
              required={false}
              themes={Array []}
              type="search"
              value="enterprise name"
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn clear-btn ml-1"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <small>
                  <span
                    aria-hidden={true}
                    className="fa fa-times"
                    id="icon-SearchField6"
                  />
                  <span
                    className="sr-only"
                  >
                    Clear search
                  </span>
                </small>
              </button>
              <button
                className="btn search-btn border-left"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-search"
                  id="Icon1"
                />
                <span
                  className="sr-only"
                >
                  Submit search
                </span>
              </button>
            </div>
          </div>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput7"
          >
            <span />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col"
    />
  </div>
</div>
`;
